--- a/map_visualization/style/style.css
+++ b/map_visualization/style/style.css
@@ -26,6 +26,8 @@ body {
     display: flex;
     flex-wrap: wrap;
 
+    overflow: hidden;
+
     /* Border Style */
     background-color: white;
 
