--- a/style.css
+++ b/style.css
@@ -5,50 +5,43 @@
   display: flex;
 }
 
-#parCoordsContain>* {
+#parCoordsContain > * {
   position: relative;
+}
+
+.plot-container .plotly {
+  display: flex;
+  position: relative;
+  left: 0;
 }
 
 #legSelectContain {
   display: flex;
-  overflow: visible;
-  position: relative;
+  position: absolute;
   font-size: 14px;
-  justify-content: left;
+  width: 200px;
+  height: 600px;
+  right: 0;
+  top: 100px;
 
+}
+
+#legend3 {
+  display: inline-block;
+  position: absolute;
+  /* right: 0; */
+  /* right: 90px; */
+  /* height: 300px; */
 }
 
 #select {
+  display: inline-block;
   position: relative;
-  top: 450px;
-  text-align: left;
-
+  /* right: 0;
+  left: 0; */
+  height: 50px;
+  /* top: 450px; */
+  /* text-align: left */
 }
 
-.legend3 {
-  position: relative;
-  top: 100px;
-  /* right: 90px; */
-  height: 300px;
 
-}
-
-g.style {
-  font-size: 13px;
-}
-
-.left {
-  left: center;
-}
-
-.right {
-  right: center;
-}
-
-.top {
-  top: center;
-}
-
-.bottom {
-  bottom: 0;
-}
