--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body {
-
-  font-family: "Source Code Pro", Consolas, monaco, monospace;
+  font-family: Lato;
 }
 
 #parCoordsContain {
-  font-family: Lato, monospace;
+  font-family: Lato;
   position: relative;
   display: flex;
 }
@@ -14,25 +13,23 @@ body {
 } */
 
 .js-plotly-plot .plotly, .js-plotly-plot .plotly div {
-  /* display: flex;
-  position: relative;
-  left: 0; */
-  font-family: Lato, monospace !important;
+  font-family: Lato !important;
 }
 
 .axis-title{
   font-size: 14px !important;
-  font-family: Lato, monospace !important;
+  font-family: Lato !important;
 }
 
-/* .gtitle{
-  font-family: Lato, monospace;
-} */
+.gtitle{
+  font-family: Lato !important;
+  font-size: 20px !important;
+}
 
 #legSelectContain {
+  font-family: Lato !important;
   display: flex;
   position: absolute;
-  font-size: 14px;
   width: 200px;
   height: 600px;
   right: 0;
@@ -45,9 +42,16 @@ body {
   top: 0px;
   left: 0px;
 }
-
+.textselected{
+  font-size: 13px !important;
+}
+text{
+  font-size: 13.5px !important;
+  font-family: Lato !important;
+}
 #select {
-  font-family: Lato, monospace;
+  font-family: Lato !important;
+  font-size: 14px;
   z-index: 2;
   position: absolute;
   top: 0px;
