--- a/map_visualization/style/style.css
+++ b/map_visualization/style/style.css
@@ -26,7 +26,6 @@ body {
     display: flex;
     flex-wrap: wrap;
 
-    overflow: hidden;
 
     /* Border Style */
     background-color: white;
@@ -77,12 +76,12 @@ body {
 
 
 #infoBox {
-    position: relative;
+    position: absolute;
     background-color: white;
 
     width: 100%;
     height: 100%;
-    flex-grow: 1;
+    /* flex-grow: 1; */
 
     border: 2px;
     border-style: solid;
