--- a/style.css
+++ b/style.css
@@ -136,11 +136,18 @@ p, select{
 
 #variableSelect {
   display: block;
+  position: relative;
 
-  float: right;
   width: 400px;
   height: 40px;
 
-  margin-right: 60px;
+  margin: 0 auto;
+}
+
+select {
+  background-color: #fff;
+  box-shadow: 1px 2px 10px -2px rgba(0,0,0,0.3);
+  border-radius: 3px;
+  transition: all 375ms ease-in-out;
 }
 
