--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
 /* --------------------------------------- Plotly.js Styling --------------------------------------- */
 #parCoordsContain {
+  
   font-family: Lato;
   position: relative;
   display: flex;
-  margin-bottom: 0;
-  padding-bottom: 0;
-
-  padding: 0 auto;
+  margin: 0 auto;
 }
 
 #bottom {
@@ -38,8 +36,9 @@
   position: relative;
   
   /* Change position of the legend here! */
-  top: 18px;
-  left: 36px;
+  top: 16px;
+  right: 120px;
+
 }
 
 
@@ -62,12 +61,17 @@ text {
   left: 0px;
 }
 
+.svg-container {
+  margin:0;
+}
+
 
 /* --------------------------------------- Site Styling --------------------------------------- */
 
 body {
   box-sizing: border-box;
-  margin: 0 40px;
+  margin: 40px, 30px, 0, 30px;
+  padding: 50px 0;
 }
 
 h1, h2 {
@@ -77,8 +81,9 @@ h1, h2 {
   text-align: center;
   font-family: "Lato", sans-serif;
 
-  margin-top: 30px;
-  margin-bottom: 0px;
+  margin-top: 0;
+  margin-bottom: 0;
+
 
 }
 
@@ -90,15 +95,16 @@ h2 {
   font-size: 1.5em;
 }
 
-p, select{
+p, select, option{
   font-family: "Open Sans", sans-serif;
 }
 
 
 .container {
+  
+  /* Sizing */
   height: 20%;
   width: 85%;
-  
   
   /* Positioning */
   position: relative;
@@ -142,12 +148,13 @@ p, select{
   height: 40px;
 
   margin: 0 auto;
+  margin-left: 39%;
 }
 
 select {
   background-color: #fff;
   box-shadow: 1px 2px 10px -2px rgba(0,0,0,0.3);
-  border-radius: 3px;
+  border-color: white;
   transition: all 375ms ease-in-out;
 }
 
